--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "eslint": "^8.55.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thedv91/eslint-plugin-tailwind-blur-safari.git"
   }
 }
